# ai_cab

./: .env  README.md  pyproject.toml
.github/: FUNDING.yml
news/: (current_date)_news_article.md  2025-10-05_news_article.md  2025_TFI.md
src/ai_cab/: crew.py  main.py
src/ai_cab/config/: agents.yaml  tasks.yaml
