[project]
name = "ai_cab"
version = "0.1.0"
description = "ai_cab using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.114.0,<1.0.0"
]

[project.scripts]
ai_cab = "ai_cab.main:run"
run_crew = "ai_cab.main:run"
train = "ai_cab.main:train"
replay = "ai_cab.main:replay"
test = "ai_cab.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
